# salestool

./: AGENTS.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  health.py
backend/app/core/: config.py
backend/app/db/: base.py
backend/app/db/models/: __init__.py
backend/salestool_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: ARCHITECTURE.md  CURRENT_SPRINT.md  PRODUCT_MASTER.md  ROADMAP.md
docs/contracts/: ACTOR_MODEL.md  AUTHORIZATION_CONTRACT.md  CONFIGURATION_CONTRACT.md  CONFIG_STRATEGIES.md  CONTRACT_PRECEDENCE.md  DECISION_FLOW.md  MODULE_INTERACTION_CONTRACT.md  TENANT_ISOLATION.md
